1.3.0 2022xxxx
  BF: Optimization and corrections
      Separation of classes into separate files.
  CR: Unification of namespace / platform icon / (sub) project structure
  CR: Added build script/process via ANT
  CR: Optimization of process scanning (reimplementation)
      It creates even less load and prioritizes even faster.

1.2.0 20220107
  BF: Correction of the unwanted program end when the service pauses
  BF: Correction of the EventLog
  CR: Change to use net.exe for start, pause, continue and stop
      Output is better understandable than with sc.exe
  CR: Optimization of process scanning
  CR: Added a multi-level priority decrease
      Idle is used only temporarily during high load, when the CPU load
      normalizes, BelowNormal is used.
  CR: Change the service own priority to AboveNormal

1.1.1 20211224
1.1.0 20211224
  CR: Optimization of process scanning
  CR: Change the target priority from 'Idle' to 'BelowNormal' (also enough)
  CR: Added command line functions for: install, uninstall, start, pause, continue and stop
      e.g. shiftdown install
  CR: Added Debug-Mode for easier testing and debugging (only during development)

1.0.0 20211219
  NT: Release is available